--- a/layouts/partials/menu-footer.html
+++ b/layouts/partials/menu-footer.html
@@ -1,14 +1,11 @@
 <center>
     <!-- Place this tag where you want the button to render. -->
-    <a class="github-button" href="https://github.com/matcornic/hugo-theme-learn/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download matcornic/hugo-theme-learn on GitHub">Download</a>
+   <a class="github-button" href="https://github.com/CloudFamily/CloudFamily" data-icon="octicon-star" data-show-count="true" aria-label="Star Cloud Family on GitHub">Star</a>
 
-    <!-- Place this tag where you want the button to render. -->
-    <a class="github-button" href="https://github.com/matcornic/hugo-theme-learn" data-icon="octicon-star" data-show-count="true" aria-label="Star matcornic/hugo-theme-learn on GitHub">Star</a>
+   <!-- Place this tag where you want the button to render. -->
+   <a class="github-button" href="https://github.com/CloudFamily/CloudFamily/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork Cloud Family on GitHub">Fork</a>
 
-    <!-- Place this tag where you want the button to render. -->
-    <a class="github-button" href="https://github.com/matcornic/hugo-theme-learn/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork matcornic/hugo-theme-learn on GitHub">Fork</a>
-
-    <p>Built with <a href="https://github.com/matcornic/hugo-theme-learn"><i class="fas fa-heart"></i></a> from <a href="https://getgrav.org">Grav</a> and <a href="https://gohugo.io/">Hugo</a></p>
+   <p>Built with <a href="https://github.com/matcornic/hugo-theme-learn"><i class="fas fa-heart"></i></a> for the Cloud Family</a></p>
 </center>
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
