--- a/docs/css/theme-mine.css
+++ b/docs/css/theme-mine.css
@@ -3,16 +3,16 @@
     
     --MAIN-TEXT-color:#323232; /* Color of text by default */
     --MAIN-TITLES-TEXT-color: #5e5e5e; /* Color of titles h2-h3-h4-h5 */
-    --MAIN-LINK-color:#599a3e; /* Color of links */
-    --MAIN-LINK-HOVER-color:#3f6d2c; /* Color of hovered links */
-    --MAIN-ANCHOR-color: #599a3e; /* color of anchors on titles */
+    --MAIN-LINK-color:#215B7D; /* Color of links */
+    --MAIN-LINK-HOVER-color:#000; /* Color of hovered links */
+    --MAIN-ANCHOR-color: #215B7D; /* color of anchors on titles */
 
-    --MENU-HEADER-BG-color:#74b559; /* Background color of menu header */
-    --MENU-HEADER-BORDER-color:#9cd484; /*Color of menu header border */ 
+    --MENU-HEADER-BG-color:#000; /* Background color of menu header */
+    --MENU-HEADER-BORDER-color:#000; /*Color of menu header border */ 
     
-    --MENU-SEARCH-BG-color:#599a3e; /* Search field background color (by default borders + icons) */
-    --MENU-SEARCH-BOX-color: #84c767; /* Override search field border color */
-    --MENU-SEARCH-BOX-ICONS-color: #c7f7c4; /* Override search field icons color */
+    --MENU-SEARCH-BG-color:#FFF; /* Search field background color (by default borders + icons) */
+    --MENU-SEARCH-BOX-color: #215B7D; /* Override search field border color */
+    --MENU-SEARCH-BOX-ICONS-color: #c215B7D; /* Override search field icons color */
 
     --MENU-SECTIONS-ACTIVE-BG-color:#1b211c; /* Background color of the active section and its childs */
     --MENU-SECTIONS-BG-color:#222723; /* Background color of other sections */
