--- a/static/css/theme-mine.css
+++ b/static/css/theme-mine.css
@@ -14,7 +14,7 @@
     --MENU-SEARCH-BOX-color: #215B7D; /* Override search field border color */
     --MENU-SEARCH-BOX-ICONS-color: #c215B7D; /* Override search field icons color */
 
-    --MENU-SECTIONS-ACTIVE-BG-color:#1b211c; /* Background color of the active section and its childs */
+    --MENU-SECTIONS-ACTIVE-BG-color:#215B7D; /* Background color of the active section and its childs */
     --MENU-SECTIONS-BG-color:#222723; /* Background color of other sections */
     --MENU-SECTIONS-LINK-color: #ccc; /* Color of links in menu */
     --MENU-SECTIONS-LINK-HOVER-color: #e6e6e6;  /* Color of links in menu, when hovered */
